--- a/main.css
+++ b/main.css
@@ -7,14 +7,14 @@
 }
 
 .nav .indent a:hover {
-    background-color: #569F39;
+    background-color: #086D44;
     border-radius: 4px;
     text-decoration: none;
     color: #FFF;
 }
 
 .nav .indent li.active a {
-    background-color: #569F39;
+    background-color: #086D44;
     border-radius: 4px;
     color: #FFF;
 }
