--- a/about/about.css
+++ b/about/about.css
@@ -6,3 +6,13 @@
     text-align: center;
 }
 
+.president img {
+    height: 350px;
+    width: auto;
+}
+
+.officer img {
+    height: 250px;
+    width: auto;
+}
+
