--- a/events/events.css
+++ b/events/events.css
@@ -1,3 +1,4 @@
+/*
 .top-bar {
     background-color: #086D44;
     border-top-left-radius: 5px;
@@ -17,6 +18,17 @@
 .name {
     color: #FFF;
 }
+*/
 
+.events-list p {
+    font-size: 180%;
+    text-align: center;
+}
+
+.events-list li {
+    font-size: 140%;
+    text-align: center;
+    list-style-position: inside;
+}
 
 
