--- a/home.css
+++ b/home.css
@@ -5,7 +5,7 @@
 }
 
 .learn-more h3 {
-  font-size: 22px;
+  font-size: 200%;
   font-weight: bold;
   color: #086D44;
   padding-bottom: 10px;
@@ -13,10 +13,12 @@
 
 .learn-more p {
     padding-top: 10px;
+    font-size: 110%;
 }
 
 .learn-more a {
-  color: #A3D12D;
+  color: #A3D120;
+  font-size: 100%;
 }
 
 .learn-more img {
