--- a/events/events.css
+++ b/events/events.css
@@ -1,40 +1,52 @@
-/*
+.event {
+    background-color: #ccc;
+    border-radius: 10px;
+    margin: 40px 0px;
+}
+
 .top-bar {
     background-color: #086D44;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    overflow: hidden;
+    font-size: 16pt;
 }
 
 .bottom-bar {
-    background-color: #ccc;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+    overflow: hidden;
 }
 
-.start_time {
+.top-bar h3 {
+    display: inline;
     color: #FFF;
+    margin-top: 5px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-bottom: 5px;
 }
 
-.name {
-    color: #FFF;
-}
-*/
-
-.events-list {
-    background-color: #ccc;
-    border-radius: 10px;
-    padding: 25px 25px;
+.event-name {
+    float: left;
+    text-align: left;
+    padding-left: 10px;
 }
 
-.events-list p {
-    font-size: 180%;
-    text-align: center;
+.start-time {
+    float: right;
+    text-align: right;
+    padding-right: 10px;
 }
 
-.events-list li {
-    font-size: 140%;
-    text-align: center;
-    list-style-position: inside;
+.description {
+    padding: 10px 10px 0px;
+    font-size: 14pt;
 }
 
+.bottom-bar button {
+    float: right;
+    margin: 0px 10px 10px;
+    border-radius: 5px;
+    background-color: #FFF;
+    font-size: 12pt;
+}
 
